--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# Compiled class file
+#============================================================================
+# GPXrouteConverter for VfrFlight
+# Since       : 4/1/2020
+# Author      : Alberto Realis-Luc <alberto.realisluc@gmail.com>
+# Web         : https://www.alus.it/airnavigator/gpx.php
+# Repository  : https://github.com/alus-it/GPXrouteConverter.git
+# Copyright   : (C) 2019-2020 Alberto Realis-Luc
+# License     : GNU GPL v3
+#
+# This source file is part of GPXrouteConverter project
+#============================================================================
+
+# Ignore bin and build folders
+/bin/
+
+# Compiled Object files
 *.class
 
-# Log file
-*.log
+# Ignore Eclipse project files
+.project
+.cproject
+.classpath
+.settings/*
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
